--- a/index.html
+++ b/index.html
@@ -4,59 +4,67 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Work</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css\style.css" />
   </head>
 
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li class="nav-menu"><a href="./index.html">Studio</a></li>
+          <li class="nav-menu"><a href="">Portfolio</a></li>
+          <li class="nav-menu"><a href="">Contacts</a></li>
         </ul>
       </nav>
 
-      <address>
+      <address class="adress">
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="contact-info"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="contact-info"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
 
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
+      
+      <section class="section-one">
+        <h1 class="title-heading">Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
-      <section>
-        <h2>Additional Information</h2>
+      
+      <section class="section-two">
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="s-ul-header">Strategy</h3>
+            <p class="s-two-paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="s-ul-header">Punctuality</h3>
+            <p class="s-ul-paragraph">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="s-ul-header">Diligence</h3>
+            <p class="s-ul-paragraph">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="s-ul-header">Technologies</h3>
+            <p class="s-ul-paragraph">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -64,51 +72,81 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
+      <section class="section-three">
+        <h2 class="section-three-header">Our Team</h2>
         <ul>
-          <li>
+          <li class="section-three-li">
             <img
               src="./images/product_designer.jpg"
               alt="Product Designer, Mark Guerello"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="s-ul-header">Mark Guerrero</h3>
+            <p class="s-ul-paragraph">Product Designer</p>
           </li>
-          <li>
+          <li class="section-three-li">
             <img
               src="./images/frontend_developer.jpg"
               alt="Frontend Developer, Tom Ford"
               width="264"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="s-ul-header">Tom Ford</h3>
+            <p class="s-ul-paragraph">Frontend Developer</p>
           </li>
-          <li>
+          <li class="section-three-li">
             <img
               src="./images/marketing.jpg"
               alt="Marketing, Camila Garcia"
               width="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="s-ul-header">Camila Garcia</h3>
+            <p class="s-ul-paragraph">Marketing</p>
           </li>
-          <li>
+          <li class="section-three-li">
             <img
               src="./images/ui_designer.jpg"
               alt="UI Designer, Daniel Wilson"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="s-ul-header">Daniel Wilson</h3>
+            <p class="s-ul-paragraph">UI Designer</p>
           </li>
         </ul>
       </section>
+
+      <section class="section-fourth">
+        <h2 class="title-fourth"></h2>
+        <ul>
+          <li><img src="images\banking-app.jpg" alt="Banking Application" width="360">
+          <h3 class="section-fourth-title">Banking App</h3>
+          <p class="section-fourth-paragraph">App</p>
+        </li>
+        <li><img src="images\cashless-payment.jpg" alt="Cashless Payment" width="360">
+          <h3 class="section-fourth-title">Cashless Payment</h3>
+          <p class="section-fourth-paragraph">Marketing</p>
+        </li>
+        <li><img src="images\meditation-app.jpg" alt="Meditation App" width="360">
+          <h3 class="section-fourth-title">Meditation App</h3>
+          <p class="section-fourth-paragraph">App</p>
+        </li>
+        <li><img src="images\taxi-service.jpg" alt="Taxi Service" width="360">
+          <h3 class="section-fourth-title">Taxi Service</h3>
+          <p class="section-fourth-paragraph">Marketing</p>
+        </li>
+        <li><img src="images\screen-illustrations.jpg" alt="Screen Illustrations" width="360">
+          <h3 class="section-fourth-title">Screen Illustrations</h3>
+          <p class="section-fourth-paragraph">Design</p>
+        </li>
+        <li><img src="images\online-courses.jpg" alt="Online Courses" width="360">
+          <h3 class="section-fourth-title">Online Courses</h3>
+          <p class="section-fourth-paragraph">Marketing</p>
+        </li>
+        </ul>
+      </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
+      <p class="footer-paragraph">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
