--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Work</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
+      integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,7 +23,9 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-studio">Studio</span></a
+        >
         <ul>
           <li class="nav-menu"><a href="./index.html">Studio</a></li>
           <li class="nav-menu"><a href="">Portfolio</a></li>
@@ -26,19 +35,22 @@
 
       <address class="adress">
         <ul>
-          <li class="contact-info"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="contact-info"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="contact-info">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="contact-info">
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
-      
       <section class="section-one">
         <h1 class="title-heading">Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
-      
+
       <section class="section-two">
         <ul>
           <li>
@@ -117,35 +129,63 @@
       <section class="section-fourth">
         <h2 class="title-fourth"></h2>
         <ul>
-          <li><img src="images\banking-app.jpg" alt="Banking Application" width="360">
-          <h3 class="section-fourth-title">Banking App</h3>
-          <p class="section-fourth-paragraph">App</p>
-        </li>
-        <li><img src="images\cashless-payment.jpg" alt="Cashless Payment" width="360">
-          <h3 class="section-fourth-title">Cashless Payment</h3>
-          <p class="section-fourth-paragraph">Marketing</p>
-        </li>
-        <li><img src="images\meditation-app.jpg" alt="Meditation App" width="360">
-          <h3 class="section-fourth-title">Meditation App</h3>
-          <p class="section-fourth-paragraph">App</p>
-        </li>
-        <li><img src="images\taxi-service.jpg" alt="Taxi Service" width="360">
-          <h3 class="section-fourth-title">Taxi Service</h3>
-          <p class="section-fourth-paragraph">Marketing</p>
-        </li>
-        <li><img src="images\screen-illustrations.jpg" alt="Screen Illustrations" width="360">
-          <h3 class="section-fourth-title">Screen Illustrations</h3>
-          <p class="section-fourth-paragraph">Design</p>
-        </li>
-        <li><img src="images\online-courses.jpg" alt="Online Courses" width="360">
-          <h3 class="section-fourth-title">Online Courses</h3>
-          <p class="section-fourth-paragraph">Marketing</p>
-        </li>
+          <li>
+            <img
+              src="images\banking-app.jpg"
+              alt="Banking Application"
+              width="360"
+            />
+            <h3 class="section-fourth-title">Banking App</h3>
+            <p class="section-fourth-paragraph">App</p>
+          </li>
+          <li>
+            <img
+              src="images\cashless-payment.jpg"
+              alt="Cashless Payment"
+              width="360"
+            />
+            <h3 class="section-fourth-title">Cashless Payment</h3>
+            <p class="section-fourth-paragraph">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="images\meditation-app.jpg"
+              alt="Meditation App"
+              width="360"
+            />
+            <h3 class="section-fourth-title">Meditation App</h3>
+            <p class="section-fourth-paragraph">App</p>
+          </li>
+          <li>
+            <img src="images\taxi-service.jpg" alt="Taxi Service" width="360" />
+            <h3 class="section-fourth-title">Taxi Service</h3>
+            <p class="section-fourth-paragraph">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="images\screen-illustrations.jpg"
+              alt="Screen Illustrations"
+              width="360"
+            />
+            <h3 class="section-fourth-title">Screen Illustrations</h3>
+            <p class="section-fourth-paragraph">Design</p>
+          </li>
+          <li>
+            <img
+              src="images\online-courses.jpg"
+              alt="Online Courses"
+              width="360"
+            />
+            <h3 class="section-fourth-title">Online Courses</h3>
+            <p class="section-fourth-paragraph">Marketing</p>
+          </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
+      <a class="logo" href="./index.html"
+        >Web<span class="logo-studio">Studio</span></a
+      >
       <p class="footer-paragraph">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
