--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css\style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
@@ -131,7 +131,7 @@
         <ul>
           <li>
             <img
-              src="images\banking-app.jpg"
+              src="images/banking-app.jpg"
               alt="Banking Application"
               width="360"
             />
@@ -140,7 +140,7 @@
           </li>
           <li>
             <img
-              src="images\cashless-payment.jpg"
+              src="images/cashless-payment.jpg"
               alt="Cashless Payment"
               width="360"
             />
@@ -149,7 +149,7 @@
           </li>
           <li>
             <img
-              src="images\meditation-app.jpg"
+              src="images/meditation-app.jpg"
               alt="Meditation App"
               width="360"
             />
@@ -157,13 +157,13 @@
             <p class="section-fourth-paragraph">App</p>
           </li>
           <li>
-            <img src="images\taxi-service.jpg" alt="Taxi Service" width="360" />
+            <img src="images/taxi-service.jpg" alt="Taxi Service" width="360" />
             <h3 class="section-fourth-title">Taxi Service</h3>
             <p class="section-fourth-paragraph">Marketing</p>
           </li>
           <li>
             <img
-              src="images\screen-illustrations.jpg"
+              src="images/screen-illustrations.jpg"
               alt="Screen Illustrations"
               width="360"
             />
@@ -172,7 +172,7 @@
           </li>
           <li>
             <img
-              src="images\online-courses.jpg"
+              src="images/online-courses.jpg"
               alt="Online Courses"
               width="360"
             />
