--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <ul>
           <li>
             <h3 class="s-ul-header">Strategy</h3>
-            <p class="s-two-paragraph">
+            <p class="s-ul-paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
