--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       </section>
 
       <section class="section-two">
+        <h2></h2>
         <ul>
           <li>
             <h3 class="s-ul-header">Strategy</h3>
@@ -131,7 +132,7 @@
         <ul>
           <li>
             <img
-              src="images/banking-app.jpg"
+              src="./images/banking-app.jpg"
               alt="Banking Application"
               width="360"
             />
@@ -140,7 +141,7 @@
           </li>
           <li>
             <img
-              src="images/cashless-payment.jpg"
+              src="./images/cashless-payment.jpg"
               alt="Cashless Payment"
               width="360"
             />
@@ -149,7 +150,7 @@
           </li>
           <li>
             <img
-              src="images/meditation-app.jpg"
+              src="./images/meditation-app.jpg"
               alt="Meditation App"
               width="360"
             />
@@ -157,13 +158,13 @@
             <p class="section-fourth-paragraph">App</p>
           </li>
           <li>
-            <img src="images/taxi-service.jpg" alt="Taxi Service" width="360" />
+            <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" />
             <h3 class="section-fourth-title">Taxi Service</h3>
             <p class="section-fourth-paragraph">Marketing</p>
           </li>
           <li>
             <img
-              src="images/screen-illustrations.jpg"
+              src="./images/screen-illustrations.jpg"
               alt="Screen Illustrations"
               width="360"
             />
@@ -172,7 +173,7 @@
           </li>
           <li>
             <img
-              src="images/online-courses.jpg"
+              src="./images/online-courses.jpg"
               alt="Online Courses"
               width="360"
             />
