--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
           >Web<span class="logo-studio">Studio</span></a
         >
         <ul>
-          <li class="nav-menu"><a href="./index.html">Studio</a></li>
-          <li class="nav-menu"><a href="">Portfolio</a></li>
-          <li class="nav-menu"><a href="">Contacts</a></li>
+          <li class="nav-menu">
+            <a class="nav-link" href="./index.html">Studio</a>
+          </li>
+          <li class="nav-menu"><a class="nav-link" href="">Portfolio</a></li>
+          <li class="nav-menu"><a class="nav-link" href="">Contacts</a></li>
         </ul>
       </nav>
 
@@ -52,7 +54,6 @@
       </section>
 
       <section class="section-two">
-        <h2></h2>
         <ul>
           <li>
             <h3 class="s-ul-header">Strategy</h3>
@@ -158,7 +159,11 @@
             <p class="section-fourth-paragraph">App</p>
           </li>
           <li>
-            <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" />
+            <img
+              src="./images/taxi-service.jpg"
+              alt="Taxi Service"
+              width="360"
+            />
             <h3 class="section-fourth-title">Taxi Service</h3>
             <p class="section-fourth-paragraph">Marketing</p>
           </li>
