--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <main>
       <section class="section-one">
         <h1 class="title-heading">Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button type="button" class="button">Order Service</button>
       </section>
 
       <section class="section-two">
