--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
       <address class="adress">
         <ul>
           <li class="contact-info">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="nav-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="contact-info">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="nav-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
