--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <address class="adress">
         <ul>
           <li class="contact-info">
-            <a class="nav-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="nav-link-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="contact-info">
             <a class="nav-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
