--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           >Web<span class="logo-studio">Studio</span></a
         >
         <ul>
-          <li class="nav-menu">
+          <li class="nav-menu" style="color: #2e2f42;">
             <a class="nav-link" href="./index.html">Studio</a>
           </li>
           <li class="nav-menu"><a class="nav-link" href="">Portfolio</a></li>
