--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           >Web<span class="logo-studio">Studio</span></a
         >
         <ul>
-          <li class="nav-menu" style="color: #2e2f42;">
-            <a class="nav-link" href="./index.html">Studio</a>
+          <li class="nav-menu">
+            <a class="nav-link" style="color: #2e2f42;" href="./index.html">Studio</a>
           </li>
           <li class="nav-menu"><a class="nav-link" href="">Portfolio</a></li>
           <li class="nav-menu"><a class="nav-link" href="">Contacts</a></li>
