--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         >
         <ul>
           <li class="nav-menu">
-            <a class="nav-link" style="color: #2e2f42;" href="./index.html">Studio</a>
+            <a class="nav-link" href="./index.html">Studio</a>
           </li>
           <li class="nav-menu"><a class="nav-link" href="">Portfolio</a></li>
           <li class="nav-menu"><a class="nav-link" href="">Contacts</a></li>
